<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/house" />


        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/propertyList"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/property_of_choices"
                android:padding="2dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/PropertyField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lo_bedroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/propertyList"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bedroomList"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/bedroom_of_choices"
                    android:padding="2dp">

                    <AutoCompleteTextView
                        android:id="@+id/BedroomField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_bedroom"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/furnitureList_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/furniture_of_choices"
                    android:padding="2dp">

                    <AutoCompleteTextView
                        android:id="@+id/furnitureField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textStyle="bold"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datetime"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="monthly rent in $"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:padding="1dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lo_furniture_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_input"
                android:layout_marginTop="5dp"
                android:hint="@string/furniture_selection">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/datetimepicker"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="20dp"
                                    android:layout_weight="1"
                                    android:focusableInTouchMode="false"
                                    android:hint="Choose your date and time"
                                    app:boxBackgroundColor="@color/white"
                                    android:padding="2dp"
                                    app:boxCornerRadiusBottomEnd="20dp"
                                    app:boxCornerRadiusBottomStart="20dp"
                                    app:boxCornerRadiusTopEnd="20dp"
                                    app:boxCornerRadiusTopStart="20dp"
                                    app:boxStrokeColor="@color/black"
                                    app:boxStrokeWidth="0dp"
                                    app:boxStrokeWidthFocused="1dp">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/datetime_input"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:cursorVisible="false"
                                        android:focusable="false"
                                        android:focusableInTouchMode="false"
                                        android:inputType="none"
                                        android:textStyle="bold" />


                                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_furniture_type"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="Note (Optional)"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                android:padding="2dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:singleLine="false"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reporter_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_input"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="Reporter"
                android:padding="2dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reporterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reporter_input"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:text="@string/submit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_submit"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:text="@string/clear" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>